--- a/ERToGo/app/src/main/AndroidManifest.xml
+++ b/ERToGo/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
 
         <activity android:name=".BodyPartActivity"></activity>
+        <activity android:name=".selfDiagnoze"></activity>
+
 
     </application>
 
