--- a/ERToGo/app/src/main/AndroidManifest.xml
+++ b/ERToGo/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity2"></activity>
+        <activity android:name=".selfDiagnoze"></activity>
+        <activity android:name=".BodyPartActivity"></activity>
+
     </application>
 
 </manifest>
