--- a/ERToGo/build.gradle
+++ b/ERToGo/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         
+      	'com.google.android.gms:play-services-maps:15.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
