redirecting to queue

--- a/ERToGo/app/src/main/AndroidManifest.xml
+++ b/ERToGo/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         </activity>
         <activity android:name=".selfDiagnoze"></activity>
         <activity android:name=".BodyPartActivity"></activity>
+        <activity android:name=".RedirectAndSend"></activity>
+        <activity android:name=".ClientQueue"></activity>
+
 
     </application>
 
