--- a/ERToGo/app/src/main/AndroidManifest.xml
+++ b/ERToGo/app/src/main/AndroidManifest.xml
@@ -16,12 +16,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".selfDiagnoze"></activity>
-        <activity android:name=".BodyPartActivity"></activity>
-        <activity android:name=".RedirectAndSend"></activity>
-        <activity android:name=".ClientQueue"></activity>
-
-
+        <activity android:name=".selfDiagnoze" />
+        <activity android:name=".BodyPartActivity" />
+        <activity android:name=".RedirectAndSend" />
+        <activity android:name=".ClientQueue" />
+        <activity
+            android:name=".UserStatusQueue"
+            android:label="@string/title_activity_user_status_queue"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UserQueueStatus"
+            android:label="@string/title_activity_user_queue_status"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
