--- a/ERToGo/app/src/main/AndroidManifest.xml
+++ b/ERToGo/app/src/main/AndroidManifest.xml
@@ -2,14 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.er_to_go">
 
-<<<<<<< Updated upstream
     <uses-permission android:name="android.permission.INTERNET" />
-=======
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
->>>>>>> Stashed changes
 
     <application
         android:allowBackup="true"
@@ -25,22 +22,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< Updated upstream
         <activity android:name=".selfDiagnoze"></activity>
         <activity android:name=".BodyPartActivity"></activity>
         <activity android:name=".RedirectAndSend"></activity>
         <activity android:name=".ClientQueue"></activity>
+        <activity android:name=".DocLoginActivity"></activity>
+        <activity android:name=".RoomsAndPatientsQueue"></activity>
 
-
-=======
-        <activity android:name=".selfDiagnoze" />
-        <activity android:name=".BodyPartActivity" />
-        <activity android:name=".DocLoginActivity" />
-        <activity android:name=".RoomsAndPatientsQueue" />
-        <activity
-            android:name=".ActivityLogin"
+        <activity android:name=".ActivityLogin"
             android:label="@string/title_activity_login"></activity>
->>>>>>> Stashed changes
     </application>
 
 </manifest>
