--- a/ERToGo/app/src/main/AndroidManifest.xml
+++ b/ERToGo/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.er_to_go">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,9 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".selfDiagnoze"></activity>
-        <activity android:name=".BodyPartActivity"></activity>
-
+        <activity android:name=".selfDiagnoze" />
+        <activity android:name=".BodyPartActivity" />
+        <activity android:name=".DocLoginActivity" />
+        <activity android:name=".RoomsAndPatientsQueue" />
+        <activity android:name=".SplashScreenActivity"></activity>
     </application>
 
 </manifest>
